[project]
name = "blog-creator-agent"
version = "2.0.0"
description = "Blog Content Creator Agent - Next.js Frontend with FastAPI Backend"
authors = [
    {name = "Woong Choi", email = "wchoi189@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    # Backend API
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic[email]>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    # LangChain & AI
    "langchain>=0.3.27,<0.4.0",
    "langchain-core>=0.3.27,<0.4.0",
    "langchain-text-splitters>=0.3.9,<0.4.0",
    "langchain-community>=0.3.27,<0.4.0",
    "langchain-openai>=0.3.31,<0.4.0",
    "langchain-ollama>=0.3.6,<0.4.0",
    "langgraph>=0.6.5,<0.7.0",
    "langchain-tavily>=0.1.1,<0.2.0",
    "langchain-redis>=0.1.1,<0.2.0",
    # Storage
    "redis>=5.0.3,<6.0.0",
    "elasticsearch[async]>=8.15.0,<9.0.0",
    # Document Processing
    "pymupdf>=1.26.4,<2.0.0",
    "Pillow>=10.0.0,<11.0.0",
    # Utilities
    "pyyaml>=6.0.2,<7.0.0",
    # Testing
    "pytest>=8.4.1,<9.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.12.9,<0.13.0",
    "pre-commit>=4.3.0,<5.0.0",
  # "jupyterlab>=4.4.6,<5.0.0",
  #  "notebook>=7.4.5,<8.0.0",
  #  "ipykernel>=6.30.1,<7.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "httpx>=0.25.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false
ignore_missing_imports = false

# Per-module options
[[tool.mypy.overrides]]
module = "jose.*"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "ruff>=0.12.9,<0.13.0",
    "pre-commit>=4.3.0,<5.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "httpx>=0.25.0,<1.0.0",
]
